objects/CMN_CommunicationSetting__mdt.object
<CustomObject>
    <description>Send communication custom setting for the static fields being used by the Send Communication functionality.</description>
    <fields>
        <fullName>CMN_Action__c</fullName>
        <defaultValue>&quot;ProceedToPapyrus&quot;</defaultValue>
        <description>Internal field.</description>
        <label>Action</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_MimeType__c</fullName>
        <description>Internal field. Indicates Mime Type to be processed at papyrus level.</description>
        <label>Mime Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_ReplyToEmailAddress__c</fullName>
        <description>Contains the ReplyTo Email address for communications.</description>
        <label>Reply To Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CMN_RequestSystemId__c</fullName>
        <description>The MDKF system Code to be sent with the Comms API payload.</description>
        <label>Request System Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_RequesterBusinessUnit__c</fullName>
        <description>Static field value which is being used by the Send Communication functionality.</description>
        <label>Requester Business Unit</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_RequesterCompany__c</fullName>
        <description>Static field being used by the Send Communication functionality.</description>
        <label>Requester Company</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Communication Setting</label>
    <pluralLabel>Communication Settings</pluralLabel>
</CustomObject>